docs/SYNTAX.ebnf
(* ============================================ *)
(* Fleen 语言 EBNF 文法 v0.0.1                  *)
(* ============================================ *)

(* ---------- 程序 ---------- *)

program         = { import_decl | declaration } ;

import_decl     = "import" , module_path ;

module_path     = ident , { "." , ident } ;


(* ---------- 声明 ---------- *)

declaration     = const_decl
                | func_decl
                | var_binding
                | expr_stmt ;


(* ---------- 变量绑定 ---------- *)

var_binding     = ident , [ type_annot ] , "=" , expr , [ ";" ] ;

const_decl      = "const" , ident , [ type_annot ] , "=" , expr , [ ";" ] ;

type_annot      = ":" , type ;


(* ---------- 函数 ---------- *)

func_decl       = "func" , ident , "(" , [ param_list ] , ")"
                  , [ type_annot ]
                  , ( "=" , expr , [ ";" ]
                    | block ) ;

param_list      = param , { "," , param } ;

param           = ident , ":" , type ;


(* ---------- 类型 ---------- *)

type            = base_type
                | array_type
                | box_type
                | ref_type
                | result_type
                | func_type ;

base_type       = "int" | "float" | "bool" | "string" | "unit" ;

array_type      = "[" , type , "]" ;

box_type        = "box" , "<" , type , ">" ;

ref_type        = "ref" , type ;

result_type     = "Result" , "<" , type , "," , type , ">" ;

func_type       = "(" , [ type , { "," , type } ] , ")" , "->" , type ;


(* ---------- 语句/表达式 ---------- *)

expr_stmt       = expr , [ ";" ] ;
(* 注：0.0.1 要求表达式语句末尾显式加分号 *)
(* 特殊规则：choose/when/otherwise 结构中，when 子句和 otherwise 子句本身不带分号 *)
(* 只有 choose 整体作为表达式语句使用时，末尾才加分号 *)

block           = "{" , { declaration | expr_stmt } , "}" ;


(* ---------- 表达式 ---------- *)

expr            = if_expr
                | while_expr
                | choose_expr
                | assign_expr ;

assign_expr     = logic_or , [ "=" , assign_expr ] ;

if_expr         = "if" , expr , block
                  , { "elif" , expr , block }
                  , [ "else" , block ] ;
(* 注：if_expr 作为表达式语句使用时，0.0.1 要求末尾加分号 *)

while_expr      = "while" , expr , block ;
(* 注：while_expr 作为表达式语句使用时，0.0.1 要求末尾加分号 *)

choose_expr     = "choose" , expr , "{"
                  , { when_clause }
                  , [ otherwise_clause ]
                  , "}" ;
(* 注：choose_expr 作为表达式语句使用时，0.0.1 要求末尾加分号 *)
(* 注意：when 子句和 otherwise 子句本身不带分号，只有整体末尾加分号 *)

when_clause     = "when" , pattern , [ "if" , expr ] , block ;
(* 注：when 子句不带分号 *)

otherwise_clause = "otherwise" , block ;
(* 注：otherwise 子句不带分号 *)

pattern         = neg_pattern
                | literal
                | ident ;

(* P5: choose pattern also accepts negated numeric literals *)
neg_pattern     = "-" , (int_lit | float_lit) ;


(* ---------- 运算符优先级（从低到高） ---------- *)

logic_or        = logic_and , { "or" , logic_and } ;

logic_and       = equality , { "and" , equality } ;

equality        = comparison , { ( "==" | "!=" ) , comparison } ;

comparison      = additive , { ( "<" | ">" | "<=" | ">=" ) , additive } ;

additive        = multiplicative , { ( "+" | "-" ) , multiplicative } ;

multiplicative  = unary , { ( "*" | "/" | "%" ) , unary } ;

unary           = [ "-" | "!" ] , postfix ;

postfix         = primary , { call_suffix | index_suffix | field_suffix } ;

call_suffix     = "(" , [ arg_list ] , ")" ;

index_suffix    = "[" , expr , "]" ;

field_suffix    = "." , ident ;

arg_list        = expr , { "," , expr } ;


(* ---------- 基本表达式 ---------- *)

primary         = literal
                | ident
                | "(" , expr , ")"
                | block
                | struct_literal ;

struct_literal  = ident , "{" , [ field_init , { "," , field_init } ] , "}" ;

field_init      = ident , ":" , expr ;


(* ---------- 字面量 ---------- *)

literal         = int_lit
                | float_lit
                | bool_lit
                | string_lit ;

int_lit         = digit , { digit } ;

float_lit       = digit , { digit } , "." , digit , { digit } ;

bool_lit        = "true" | "false" ;

string_lit      = '"' , { any_char } , '"' ;


(* ---------- 标识符 ---------- *)

ident           = letter , { letter | digit | "_" } ;

letter          = "a" .. "z" | "A" .. "Z" | "_" ;

digit           = "0" .. "9" ;

any_char        = ? 除双引号外的任意字符 ? ;


(* ---------- 注释 ---------- *)

comment         = "//" , { any_char_except_newline } , newline
                | "/*" , { any_char } , "*/" ;

(* 注：0.0.1 要求显式分号，ASI（自动分号插入）计划在后续版本实现 *)
